# KomootGPX

./: .gitignore  README.md  api.py  gpxcompiler.py  komoot-gpx.py  pyproject.toml  requirements.txt  setup.py  utils.py
komootgpx/: .gitignore  __init__.py  __main__.py  __version__.py  api.py  gpxcompiler.py  komootgpx.py  utils.py
tools/: cleanup.pl
